--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ dependencies {
 	compile("javax.servlet:javax.servlet-api:3.0.1")
 	compile("javax.servlet.jsp:jsp-api:2.1")
 	compile("javax.servlet:jstl:1.2")
+	compileOnly("org.projectlombok:lombok:1.18.0")
 
     testImplementation 'junit:junit:4.12'
 }
